Añadido nuevo aviso y pagina de cliente

--- a/client.html
+++ b/client.html
@@ -42,7 +42,7 @@ body {
 <body>
   <header>
     <nav>
-      MEJORAS DE RENDIMIENTO APLICADAS
+      Pagina de cliente
       <ul>
     <li><a href="index.html">HOT FIX!</a></li>
     <li><a href="#">contacts</a></li>
