Modificado el menú principal con la nueva sección de clientes

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ body {
     <li><a href="contacts.html">CONTACTO</a></li>
     <li><a href="services.html">SERVICIOS</a></li>
     <li><a href="quienes-somos.html">quiénes somos</a></li>
+    <li><a href="client.html">Seccion de clientes</a></li>
    </ul>
   <p>
    &#10004; Cras <em>congue</em> congue malesuada, <strong> Aenean pharetra </strong> enim et lectus pretium <strong>interdum</strong>. Sed convallis erat enim, cursus </p>
