Mejoras para la v2.0

--- a/contacts.html
+++ b/contacts.html
@@ -58,6 +58,7 @@ body {
   <input type="text" name="email"/>
   </form>
 </div>
+<div><img src="images/weather.png"></div>
 <!-- Free template distributed by http://freehtml5templates.com -->
 <a href="aviso.html">legal advice</a>
 </body>
