--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body {
   <nav>
   <h1 class="cursivebig"> &#9988; Lorem ipsum Venalit quatium sarem</h1>
    <ul>
-    <li><a href="#">INICIO</a></li>
+    <li><a href="#">INICIO v2.0</a></li>
     <li><a href="contacts.html">CONTACTO</a></li>
     <li><a href="services.html">SERVICIOS</a></li>
     <li><a href="quienes-somos.html">quiénes somos</a></li>
