--- a/services.html
+++ b/services.html
@@ -43,7 +43,7 @@ body {
   <header>
     <nav>
       <ul>
-    <li><a href="index.html">HOT FIX!</a></li>
+    <li><a href="index.html">Inicio v2.0</a></li>
     <li><a href="contacts.html">contacts</a></li>
      <li><a href="#">services</a></li>
           <li><a href="quienes-somos.html">quiénes somos</a></li>
